--- a/css/style.css
+++ b/css/style.css
@@ -4,3 +4,11 @@
 	font-weight: 1;
 	font-style: normal;
 }
+.headtext{
+    position: absolute;
+    font-size: 50px;
+    color:#8a6013;
+    top: 35%;
+    left: 29%;
+    font-weight:500
+}
