--- a/css/TomatoAll.css
+++ b/css/TomatoAll.css
@@ -1,66 +1,66 @@
-body {
-    overflow-x: hidden;
-    font-family: 'Roboto';
-    color: #324950;
-    background-color: #FCF0F0;
-    padding:0;
-    margin: 0;
+body{
+    background: #FCF0F0;
 }
-.container {
-    max-width: 1920px;
-    padding: 0;
-    margin: 0;
-}
-.header{
-    margin: 0;
-    padding: 0;
-    width: auto;
-    background-color: #FFFAFA;
-}
-.head {
-    padding-top: 20px;
-    margin-right: auto;
-    margin-left: auto;
-    margin-bottom: 30px;
-    width: 1130px;
-    height: 113px;
-    left: 388px;
-    right: 405px;
-    display: flex;
-    justify-content: space-between;
-}
-.logotip {
-    width: 225px;
-    height: 113px;
-} 
-.HeadSerch{
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    align-content: space-between;
-}
-.search {
-    width: 350px;
-    height: 29px;
-    border-bottom: solid 1px black;
-    background: rgba(0,0,0,0);
-    display: flex;
-    justify-content: space-between;
-    margin-left: auto;
 
+.header{
+    position: absolute;
+width: 1920px;
+height: 122px;
+left: 0px;
+top: 0px;
+
+background: #FFFFFF;
+box-shadow: 0px 4px 24px rgba(0, 0, 0, 0.15);
 }
+
+
+.logotip{
+    position: absolute;
+    width: 166px;
+    height: 83px;
+    left: 394px;
+    top: 20px;
+}
+
 .SearchInput{
+    position: absolute;
+    width: 53px;
+    height: 21px;
+    left: 1165px;
+    top: 20px;
+    font-family: 'Roboto Slab';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 21px;
+    color: #324950;
     background: transparent;
     border: 0;
-    font-weight:500;
 }
-.SerchIcon {
-    margin: 3px 0;
-    width: 18px;
-    height: 18px;
+
+.search_line{
+    position: absolute;
+    width: 350px;
+    height: 0px;
+    left: 1165px;
+    top: 49px;
+    border: 1px solid #324950;
 }
-.Menu{
+
+.search_vector{
+    position: absolute;
+    left: 1497px;
+    top: 21px;
+
+
+}
+
+.HeadNav{
+    position: absolute;
+    width: 499px;
+    height: 26px;
+    left: 1016px;
+    top: 74px;
     display: flex;
     justify-content: space-between;
     list-style-type: none;
@@ -68,138 +68,386 @@ body {
     height:25px;
     font-weight:700;
     margin-right: auto;
-}
-.middle {
-    max-width: 1130px;
-    margin: 0 auto;
-}
-.MiddleTitle{
-    margin-top: 40px;
-    font-size: 44px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    height: 109px;
-}
-.MiddleText{
-    margin: 0;
-}
-.union {
-    width: 47px;
-}
-.Abzac {
-    margin-top: 40px;
-    color: #324950;
-    font-size: 17px;
-}
-.FirstLine {
-    margin-right: 24px;
-}
-.FirstText {
-    display: flex;
-    margin-bottom: 35px;
-
-}
-.FirstMiniText {
-    margin: auto 0;
-}
-.SecondText {
-    height: 390px;
-    background-color: #FFFAFA;
-} 
-.SecondLine {
-    margin: 25px 0;
-}
-.SecondSpecialText {
-    font-size: 17px;
-}
-.SecondSpecialText2 {
-    font-size: 17px;
-    margin-top: 24px;
-}
-.SecondTitle {
-    margin-top: 25px;
-    font-size: 20px;
-}
-.Third {
-    display: flex;
-    margin-bottom: 35px;
-    margin-top: 25px;
-}
-.ThirdLine {
-    margin-right: 24px;
-}
-.MiniText {
-    margin-top: 25px;
-    font-size: 18px;
+    
     
 }
-.Fourth {
-    display: grid;
-    grid-template-rows: 1fr 1fr 1fr;
-    grid-template-columns: 1fr 1fr 1fr;
-}
-.FourthTomato  {
-    width: 350px;
-    margin: 0;
-}
-.FourthText {
-    text-align: center;
-    color: #57984C;
-    font-size: 20;
-}
-.FooterTop {
-    display: flex;
-    justify-content: space-between;
-    background-color: #2D3F45;
-}
-.FooterItem {
-    color: #FFFFFF;
-    margin-right: 45px;
-}
-.FooterLink {
-    display: flex;
-    justify-content: space-between;
-}
-.FooterList {
-    margin-left: 400px;
-    margin-top: 30px;
-    list-style-type: none;
-    display: flex;
-    width: 724px;
-    height: 23px;
-}
-.Social{
-    display:flex;
-    list-style-type: none;
-    margin-right: 400px;
-}
-.footer {
-    width: 1920px;
-    height: 76px;
-}
-.FooterSocial {
-    margin-left: 10px;
-    margin-top: 25px;
-}
-.FooterBottom {
-    width: 1920px;
-    height: 51px;
-    background-color: #324950;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-.FooterText {
-    font-size: 14px;
-    color: #B9B9B9;
-    margin: 0;
-    padding: 0;
-}
-a {
-    color: #324950;
-}
-a:hover {
-    color: #324950;
+
+.NavItem{
     text-decoration: none;
+    font-family: 'Heebo';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 26px;
+    text-align: right;
+    color: #324950;
+}
+
+.tomatoImage{
+    position: absolute;
+    width: 1920px;
+    height: 480px;
+    left: 0px;
+    top: 122px;
+}
+
+.MiddleCentralText{
+    position: absolute;
+    width: 827px;
+    height: 63px;
+    left: 405px;
+    top: 653px;
+    font-family: 'Roboto Slab';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 44px;
+    line-height: 142.7%;
+    color: #324950;
+}
+
+.UnderCentralText{
+    position: absolute;
+    width: 47.24px;
+    height: 6.24px;
+    left: 405px;
+    top: 756px;
+}
+
+.MiddleText{
+    position: absolute;
+    width: 1097px;
+    height: 290px;
+    left: 405px;
+    top: 803px;
+    font-family: 'Roboto Slab';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 17px;
+    line-height: 150%;
+    color: #324950;
+}
+
+.RedLine1{
+    position: absolute;
+    width: 4px;
+    height: 60px;
+    left: 405.5px;
+    top: 1113.5px;
+    background: #EB5757;
+    border-radius: 4px;
+}
+
+.MiddleText1{
+    position: absolute;
+    width: 1036px;
+    height: 54px;
+    left: 435.5px;
+    top: 1116.5px;
+    font-family: 'Roboto Slab';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 17px;
+    line-height: 150%;
+    color: #324950;
+}
+
+.WhiteCard{
+    position: absolute;
+    width: 1152px;
+    height: 449.5px;
+    left: 385px;
+    top: 1203.5px;
+    background: #FFFAFA;
+}
+
+.TopCardFirstText{
+    position: absolute;
+    width: 350px;
+    height: 58px;
+    left: 20px;
+    top: 50px;
+    font-family: 'Roboto Slab';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 142.7%;
+    color: #324950;
+}
+
+.CardFirstLine{
+    position: absolute;
+    width: 350px;
+    height: 0px;
+    left: 20px;
+    top: 123px;
+    border: 1px solid #324950;
+}
+
+.CardFirstText{
+    position: absolute;
+    width: 350px;
+    height: 212px;
+    left: 20px;
+    top: 137.5px;
+    font-family: 'Roboto Slab';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 17px;
+    line-height: 150%;
+    color: #324950;
+}
+
+.TopCardSecondText{
+    position: absolute;
+    width: 350px;
+    height: 58px;
+    left: 400px;
+    top: 50px;
+    font-family: 'Roboto Slab';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 142.7%;
+    color: #324950;
+}
+
+.CardSecondLine{
+    position: absolute;
+    width: 350px;
+    height: 0px;
+    left: 400px;
+    top: 123px;
+    border: 1px solid #324950;
+}
+
+.CardSecondText{
+    position: absolute;
+    width: 350px;
+    height: 212px;
+    left: 400px;
+    top: 137.5px;
+    font-family: 'Roboto Slab';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 17px;
+    line-height: 150%;
+    color: #324950;
+}
+
+.TopCardThirdText{
+    position: absolute;
+    width: 350px;
+    height: 58px;
+    left: 780px;
+    top: 50px;
+    font-family: 'Roboto Slab';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 142.7%;
+    color: #324950;
+}
+
+.CardThirdLine{
+    position: absolute;
+    width: 350px;
+    height: 0px;
+    left: 780px;
+    top: 123px;
+    border: 1px solid #324950;
+}
+
+.CardThirdText{
+    position: absolute;
+    width: 350px;
+    height: 212px;
+    left: 780px;
+    top: 137.5px;
+    font-family: 'Roboto Slab';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 17px;
+    line-height: 150%;
+    color: #324950;
+}
+
+.ShortRedLine{
+    position: absolute;
+    width: 4px;
+    height: 40px;
+    left: 405px;
+    top: 1693px;
+    background: #EB5757;
+    border-radius: 4px;
+}
+
+.ShortTextUnderCard{
+    position: absolute;
+    width: 647px;
+    height: 26px;
+    left: 435px;
+    top: 1700px;
+    font-family: 'Roboto Slab';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 17px;
+    line-height: 150%;
+    color: #324950;
+}
+
+.one-one{
+    position: absolute;
+    width: 350px;
+    height: 321px;
+    left: 405px;
+    top: 1773px;
+}
+
+.card-text{
+    text-align: center;
+    position: absolute;
+    width: 314px;
+    height: 51px;
+    font-family: 'Roboto Slab';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 28.54px;
+    color: #57984C;
+    top:9px;
+}
+.card-text1{
+    position: absolute;
+    width: 314px;
+    height: 51px;
+    font-family: 'Roboto Slab';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 22.84px;
+    color: #57984C;
+    text-align: center;
+    left:18px;
+}
+.card-body{
+    position: absolute;
+    width: 350px;
+    height: 69px;
+    left: 0px;
+    top: 252px;
+    background: #FFFFFF;
+}
+
+.one-two{
+    position: absolute;
+    width: 350px;
+    height: 321px;
+    left: 785px;
+    top:1773px;
+}
+
+.one-three{
+    position: absolute;
+    width: 350px;
+    height: 321px;
+    left: 1165px;
+    top: 1773px;
+}
+
+.two-one{
+    position: absolute;
+    width: 350px;
+    height: 321px;
+    left: 405px;
+    top: 2124px;
+}
+
+.two-two{
+    position: absolute;
+    width: 350px;
+    height: 321px;
+    left: 785px;
+    top: 2124px;
+}
+
+.two-three{
+    position: absolute;
+    width: 350px;
+    height: 321px;
+    left: 1165px;
+    top: 2124px;
+}
+
+.three-one{
+    position: absolute;
+    width: 350px;
+    height: 321px;
+    left: 405px;
+    top: 2475px;
+}
+
+.three-two{
+    position: absolute;
+    width: 350px;
+    height: 321px;
+    left: 785px;
+    top: 2475px;
+}
+
+.lower_navgroup{
+	background:#2D3F45; 
+	position: absolute;
+	width: 1920px;
+	height: 76px;
+	max-height: 76px;
+	left: 0px;
+	top: 2846px;
+	color: white;
+}
+
+.lower_nav{
+	position: absolute;
+	width: 724px;
+	height: 23px;
+	left: 405px;
+	top:27px;
+	display: flex;
+    justify-content: space-between;
+	
+}
+
+.lower_nav-link{
+	font-family: 'Roboto';
+	font-style: normal;
+	font-weight: 400;
+	font-size: 16px;
+	line-height: 142.7%;
+	color: #FFFFFF;
+}
+
+.social_network{
+	padding-top: 23px;
+	padding-left: 1303px;
+}
+
+.lower_end{
+	position: absolute;
+	width:1920px;
+	height: 51px;
+	background: #324950;;
+	left:0px;
+    top:76px;
+}
+
+.text_end{
+	text-align: center;
+	font-family: 'Roboto';
+	font-style: normal;
+	font-weight: 400;
+	font-size: 14px;
+	line-height: 142.7%;
+	padding-top:18px;
+
+
+	color: #B9B9B9;
 }
