--- a/css/header.css
+++ b/css/header.css
@@ -1,4 +1,4 @@
-body {
+body{
     overflow-x: hidden;
     font-family: 'Roboto';
     color: #324950;
@@ -6,96 +6,139 @@ body {
     margin: 0;
 }
 
-.container {
-    max-width: 1920px;
-    padding: 0 0;
-    margin: 0 auto;
-}
-.header {
-    width: 1920px;
-    height: 850px;
-}
-.banner {
+.logo_top{  
     position: absolute;
-    width: 1920px;
-    height: 850px;  
-}
-a.button {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    -ms-transform: translate(-50%, -50%);
-    background-color: #108f3a;
-    font-size: 16px;
-    padding: 12px 24px;
-    border: none;
-    cursor: pointer;
-    border-radius: 0px;
-}
-.logotip {
-    width: 225px;
-    height: 113px;
-    margin: 10px 0;
-} 
-.head{
-    position: absolute;
-    margin: 20px auto;
-    width: 1130px;
+    width: 226px;
     height: 113px;
     left: 388px;
-    right: 405px;
+    top: 20px;
+    mix-blend-mode: darken;
+}
+
+.SearchInput{
+    position: absolute;
+width: 52px;
+height: 21px;
+left: 1165px;
+top: 20px;
+
+font-family: 'Roboto Slab';
+font-style: normal;
+font-weight: 400;
+font-size: 16px;
+line-height: 21px;
+background: transparent;
+border: 0;
+font-weight:500;
+color: #324950;
+}
+
+.search_line{
+    position: absolute;
+    width: 350px;
+    height: 0px;
+    left: 1165px;
+    top: 49px;
+
+    
+
+    border: 1px solid #324950;
+}
+
+.search_vector{
+    position: absolute;
+    margin-top: 21px;
+    margin-left: 1497px; 
+    margin-right: 405px; 
+    margin-bottom: 811px;
+}
+.nav{
+   position: absolute;
+   width: 600px;
+   height: 26px;
+   margin-left: 465px; 
+   margin-top:42px;
+   }
+
+.nav-link{
+    font-family: 'Heebo';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 26px;
+    text-align: right;
+    margin-left:0px;
+    color: #324950;
+}
+
+.banner_bg{
+    width: 1920px;
+    height: 850px;
+    left: 0px;
+    top: 0px;
+
+}
+
+.banner_text{
+    position: absolute;
+width: 804px;
+height: 68px;
+left: 558px;
+top: 362px;
+
+font-family: 'Roboto Slab';
+font-style: normal;
+font-weight: 700;
+font-size: 48px;
+line-height: 142.7%;
+/* or 68px */
+
+text-align: center;
+
+color: #735440;
+}
+.banner_btn_font{
+
+
+font-family: 'Roboto';
+font-style: normal;
+font-weight: 500;
+font-size: 16px;
+line-height: 142.7%;
+/* identical to box height, or 23px */
+
+text-align: center;
+letter-spacing: 0.07em;
+text-transform: uppercase;
+
+color: #FFFFFF;
+
+
+/* Inside auto layout */
+
+flex: none;
+order: 0;
+flex-grow: 0;
+}
+.banner_btn{
     display: flex;
-    justify-content: space-between;
+    flex-direction: row;
+    align-items: center;
+    padding: 16px 31px;
+    gap: 10px;
+    
+    position: absolute;
+    width: 168px;
+    height: 55px;
+    left: 880px;
+    top: 490px;
+    
+    letter-spacing: 0.07em;
+    text-transform: uppercase;
+    
+    background: #57984C;
     
 }
-.HeadSerch{
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    align-content: space-between;
-}
-.search {
-    width: 350px;
-    height: 29px;
-    border-bottom: solid 1px black;
-    background: rgba(0, 0, 0, 0);
-    display: flex;
-    justify-content: space-between;
-    margin-left: auto;
-
-}
-.SearchInput{
-    background: transparent;
-    border: 0;
-    font-weight:500;
-}
-.SerchIcon {
-    margin: 3px 0;
-    width: 18px;
-    height: 18px;
-}
-.Menu{
-    display: flex;
-    justify-content: space-between;
-    list-style-type: none;
-    width: 499px;
-    height:25px;
-    font-weight:700;
-    margin-right: auto;
-}
-.MenuItem {
-    color: #3d5e68;
-}
-a {
-    color: #324950;
-}
-a:hover {
-    color: #324950;
-    text-decoration: none;
-}
-
 
 
 
