--- a/css/middle.css
+++ b/css/middle.css
@@ -1,93 +1,154 @@
-
-.middle {
-    margin: 0;
-    max-width: 1920px;
-
+body{
+    background-color: #E5E5E5;
 }
-.MiddleList {
+
+.MiddleList{
+    max-height: 190px;
+    max-width: 1920px;
     display: flex;
     justify-content: space-between;
     list-style-type: none;
     align-items: center;
     padding: 20px 175px;
+    background: #FFFFFF;
 }
-.MiddleItem {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-.MiddleIco {
-    margin-bottom: 20px;
-}
-.MiddleVis {
-    margin: 70px 5 5 5;
-    display: flex;
-    flex-direction: column;   
-} 
 
-.MiddleVision {
-    display: flex;
-    justify-content: center;
+.middle{
+    
+    margin-top: 0px;
 }
-.vision {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+
+.middle_union_1{
+    background: #E5E5E5 ;
+    position: absolute;
+width: 2114.96px;
+height: 1097.84px;
+left: -97px;
+top: 1111.16px;
 }
-.MiddlePoints {
-    width: 48px;
-    height: 6;
-    margin: 30px 0;
-    margin-left: 42px;
+.middle_vision{
+    position: absolute;
+width: 197px;
+height: 91px;
+left: 405px;
+top: 1218px;
+
+font-family: 'Roboto Slab';
+font-style: normal;
+font-weight: 700;
+font-size: 64px;
+line-height: 142.7%;
+/* or 91px */
+
+
+/* Text color */
+
+color: #324950;
 }
-.MiddleText {
-    width: 450px;
-    height: 132px;
-    margin-left: 42px;
-    font-size:125%
+
+.under_vision{
+    position: absolute;
+width: 47.24px;
+height: 6.24px;
+left: 405px;
+top: 1334px;
 }
-.MiddlePhoto {
-    width: 545px;
-    height: 545px;
+
+.text_undervision{
+    position: absolute;
+width: 495px;
+height: 132px;
+left: 405px;
+top: 1371px;
+
+font-family: 'Roboto Slab';
+font-style: normal;
+font-weight: 400;
+font-size: 20px;
+line-height: 162.7%;
+/* or 33px */
+
+
+/* Text color */
+
+color: #324950;
 }
-.MiddleTitle {
-    font-weight: bold;
-    margin-left: 42px;
+
+.middle_image3{
+    position: absolute;
+width: 540px;
+height: 498px;
+left: 975px;
+top: 1111px;
+
+
+filter: drop-shadow(0px 20px 40px rgba(0, 0, 0, 0.25));
 }
-.Agrideras {
-    background-color: #EDEDED;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 1920px;
-    padding: 60px 0;
+
+.middle_image2{
+position: absolute;
+width: 540px;
+height: 500px;
+left: 405px;
+top: 1709px;
+
+
+filter: drop-shadow(0px 20px 40px rgba(0, 0, 0, 0.25));
 }
-.AgriderasTitle {
-    font-size: 50px;
-    font-weight:900
+
+.btn_play{
+position: absolute;
+width: 90px;
+height: 90px;
+left: 630px;
+top: 1914px;
 }
-.LowerSysteme {
-    display: flex;
+
+.middle_mission{
+    position: absolute;
+width: 244px;
+height: 91px;
+left: 1015px;
+top: 1836px;
+
+font-family: 'Roboto Slab';
+font-style: normal;
+font-weight: 700;
+font-size: 64px;
+line-height: 142.7%;
+/* or 91px */
+
+
+/* Text color */
+
+color: #324950;
 }
-.LowerSystem {
-    display: flex;
-    max-height: 357px;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    margin: 0 40px;
+
+.under_mission{
+    position: absolute;
+width: 47.24px;
+height: 6.24px;
+left: 1015px;
+top: 1952px;
 }
-.LowerIcons {
-    width: 183px;
-    margin: 30px 0;
+.text_undermission{
+    position: absolute;
+width: 495px;
+height: 99px;
+left: 1015px;
+top: 1989px;
+
+font-family: 'Roboto Slab';
+font-style: normal;
+font-weight: 400;
+font-size: 20px;
+line-height: 162.7%;
+/* or 33px */
+
+
+/* Text color */
+
+color: #324950;
 }
-.LowerText {
-    text-align: center;
-    width: 241px;
-    height: 52px;
-    font-size: 18px;
-}
-.LowerTitle {
-    color: green;
-    font-size: 24px;
-}
+
+
