--- a/css/footer.css
+++ b/css/footer.css
@@ -1,242 +1,56 @@
-@font-face {
-	font-family: 'Roboto Slab';
-	src: url('RobotoSlab-Regular.woff2') format('woff2'), url('RobotoSlab-Regular.woff') format('woff');
-	font-weight: 1;
-	font-style: normal;
+.FooterTop {
+    margin: auto auto;
+    background-color: #2D3F45;
 }
-
-.lower_group{
-    position: absolute;
-	width: 1920px;
-	height: 640px;
-	left: 0px;
-	top: 2309px;
-
-background: #EDEDED;
-}
-
-.Agrideras_main{
-    position: absolute;
-	width: 776px;
-	height: 91px;
-	left: 572px;
-	top:70px;
-
-	font-family: 'Roboto Slab';
-	font-style: normal;
-	font-weight: 700;
-	font-size: 64px;
-	line-height: 142.7%;
-	color: #324950;
-}
-
-.under_agrideras{
-    position: absolute;
-	width: 776px;
-	height: 91px;
-	left: 936px;
-	top: 156px;
-
-	font-family: 'Roboto Slab';
-	font-style: normal;
-	font-weight: 700;
-	font-size: 64px;
-	line-height: 142.7%;
-	color: #324950;
-}
-
-.first_image{
-	position: absolute;
-	width: 354px;
-	height: 261px;
-	left: 399px;
-	top: 200px;
-}
-
-.first_text{
-	position: absolute;
-	width: 243px;
-	height: 34px;
-	left: 454px;
-	top: 422px;
-	font-family: 'Roboto Slab';
-	font-style: normal;
-	font-weight: 700;
-	font-size: 24px;
-	line-height: 142.7%;
-	color: #57984C;
-}
-
-.first_line{
-	position: absolute;
-	width: 183px;
-	height: 0px;
-	left: 484px;
-	top: 483px;
-	border: 1px solid #57984C;
-}
-
-.first_content{
-	position: absolute;
-	width: 243px;
-	height: 52px;
-	left: 454px;
-	top: 503px;
-	font-family: 'Roboto Slab';
-	font-style: normal;
-	font-weight: 400;
-	font-size: 18px;
-	line-height: 142.7%;
-	text-align: center;
-	color: #324950;
-}
-
-.second_image{
-	position: absolute;
-	width: 232px;
-	height: 232px;
-	left: 843px;
-	top: 175px;
-}
-
-.second_text{
-	position: absolute;
-	width: 183px;
-	height: 34px;
-	left: 869px;
-	top: 422px;
-	font-family: 'Roboto Slab';
-	font-style: normal;
-	font-weight: 700;
-	font-size: 24px;
-	line-height: 142.7%;
-	color: #57984C;
-}
-
-.second_line{
-	position: absolute;
-	width: 183px;
-	height: 0px;
-	left: 869px;
-	top: 483px;
-	border: 1px solid #57984C;
-}
-
-.second_content{
-	position: absolute;
-	width: 245px;
-	height: 52px;
-	left: 838px;
-	top: 497px;
-	font-family: 'Roboto Slab';
-	font-style: normal;
-	font-weight: 400;
-	font-size: 18px;
-	line-height: 142.7%;
-	text-align: center;
-	color: #324950;
-}
-
-.third_image{
-	position: absolute;
-	width: 295px;
-	height: 213px;
-	left: 1206px;
-	top: 219px;
-	}
-
-.third_text{
-	position: absolute;
-	width: 206px;
-	height: 34px;
-	left: 1244px;
-	top: 422px;
-	font-family: 'Roboto Slab';
-	font-style: normal;
-	font-weight: 700;
-	font-size: 24px;
-	line-height: 142.7%;
-	color: #57984C;
-}
-
-.third_line{
-	position: absolute;
-	width: 183px;
-	height: 0px;
-	left: 1255px;
-	top: 483px;
-	border: 1px solid #57984C;
-}
-
-.third_content{
-	position: absolute;
-	width: 292px;
-	height: 52px;
-	left: 1201px;
-	top: 497px;
-	font-family: 'Roboto Slab';
-	font-style: normal;
-	font-weight: 400;
-	font-size: 18px;
-	line-height: 142.7%;
-	text-align: center;
-	color: #324950;
-}
-
-.lower_navgroup{
-	background:#2D3F45; 
-	position: absolute;
-	width: 1920px;
-	height: 76px;
-	max-height: 76px;
-	left: 0px;
-	top: 2949px;
-	color: white;
-}
-
-.lower_nav{
-	position: absolute;
-	width: 724px;
-	height: 23px;
-	left: 405px;
-	top:27px;
-	display: flex;
+.FooterTopBlock {
+    margin: 0 auto;
+    width: 75%;
+    height: auto;
+    display: flex;
     justify-content: space-between;
-	
+    min-height: 100px;
 }
-
-.lower_nav-link{
-	font-family: 'Roboto';
-	font-style: normal;
-	font-weight: 400;
-	font-size: 16px;
-	line-height: 142.7%;
-	color: #FFFFFF;
+.FooterListItem {
+    color: #FFFFFF;
+    font-size: 16px;
 }
-
-.social_network{
-	padding-top: 23px;
-	padding-left: 1303px;
+.FooterBlock {
+    margin: auto 0;
 }
-
-.lower_end{
-	position: absolute;
-	width:1920px;
-	height: 51px;
-	background: #324950;;
-	margin-top: 2010px;
-	
+.FooterList {
+    margin: 0;
+    padding: 0;
+    list-style-type: none;
+    display: flex;
+    justify-content: space-between;
 }
-
-.text_end{
-	text-align: center;
-	font-family: 'Roboto';
-	font-style: normal;
-	font-weight: 400;
-	font-size: 14px;
-	line-height: 142.7%;
-	padding-top:18px;
-
-
-	color: #B9B9B9;
+.FooterListSoc {
+    display:flex;
+    margin: 0;
+    padding: 0;
+    justify-content: space-between;
+    list-style-type: none;
+}
+.footer {
+    max-width: 1920px;
+}
+.FooterBottom {
+    max-width: 1920px;
+    height: 51px;
+    background-color: #324950;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.text {
+    font-size: 14px;
+    color: #B9B9B9;
+    margin: 0;
+    padding: 0;
+}
+.right {
+    width: 20%;
+}
+.left {
+    width: 50%;
 }
